# ShaderPlayer

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.json
.claude/agents/: shader-reviewer.md
.claude/hooks/: block-config-json.sh  validate-hlsl.sh
.claude/skills/new-shader/: SKILL.md
default_shaders/: acoustic_geology.hlsl  arthropod_cuticle.hlsl  audio_bass_pulse.hlsl  audio_fluid_vortex.hlsl  audio_spectrum.hlsl  audio_waveform.hlsl  chromatic_aberration.hlsl  colour_grading.hlsl  crt_simulation.hlsl  datamosh_drift.hlsl  diffusion_limited_aggregation.hlsl  domain_warp.hlsl  electromagnetic_field.hlsl  false_colour.hlsl  fourier_crystal_growth.hlsl  fourier_sculpting.hlsl  frequency_chromesthesia.hlsl  game_of_life.hlsl  hele_shaw_fingering.hlsl  holographic_diffraction.hlsl  hyperbolic_tiling.hlsl  julia_set.hlsl  kaleidoscope.hlsl  mandelbulb.hlsl  newton_fractal.hlsl  non_euclidean_lens.hlsl  oil_paint_filter.hlsl  passthrough.hlsl  perlin_flow_field.hlsl  physarum_slime_mould.hlsl  pixel_sort.hlsl  psychoacoustic_topography.hlsl  radial_burst.hlsl  reaction_diffusion.hlsl  safe_areas.hlsl  slit_scan.hlsl  strange_attractor.hlsl  synaptic_fire_network.hlsl  thermal_false_colour.hlsl  voronoi_cells.hlsl  (+1 more)
docs/: audio_playback_investigation.md  shader-parameter-guide.md
docs/plans/: 2026-02-21-keybinding-improvements-design.md  2026-02-21-keybinding-improvements.md  2026-02-21-shader-parameters-design.md  2026-02-21-shader-parameters-impl.md  2026-02-22-workspace-presets-design.md  2026-02-22-workspace-presets-impl.md  2026-02-23-keyframe-animation-design.md  2026-02-23-keyframe-animation-plan.md  2026-02-23-keyframe-transport-integration-design.md  2026-02-23-keyframe-transport-integration.md
resources/: ShaderPlayer.rc
shaders/: ascii_noise.hlsl  audio_bass_pulse.hlsl  audio_spectrum.hlsl  audio_waveform.hlsl  chromatic_aberration.hlsl  crochet.hlsl  depixelation.hlsl  false_colour.hlsl  fluted_glass.hlsl  focus_peaking.hlsl  grayscale.hlsl  halftone.hlsl  led_panel.hlsl  lego_bricks.hlsl  pixel_matrix.hlsl  pixel_sdf.hlsl  pixelate.hlsl  plasma.hlsl  receipt_bars.hlsl  rgb_parade.hlsl  sharpen.hlsl  tunnel_beads.hlsl  vectorscope.hlsl  vignette.hlsl  zebra.hlsl
src/: Application.cpp  Application.h  AudioAnalyzer.cpp  AudioAnalyzer.h  AudioPlayer.cpp  AudioPlayer.h  Common.h  ConfigManager.cpp  ConfigManager.h  D3D11Renderer.cpp  D3D11Renderer.h  KeyframeTimeline.cpp  ShaderManager.cpp  ShaderManager.h  SpoutOutput.cpp  SpoutOutput.h  UIManager.cpp  UIManager.h  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h  VideoOutputWindow.cpp  VideoOutputWindow.h  WorkspaceManager.cpp  WorkspaceManager.h  main.cpp
tasks/: shader_catalogue.md  shaderfixes  todo.md
